# marcelloh

./: .gitignore  ChangeLog.md  LICENSE  README.md  marcelloh.cabal
app/: Main.hs
doc/: kata.md  sample.ics
src/: Cal.hs
test/: CalSpec.hs
