name:           marcelloh
version:        0.1.0.0
synopsis:       Short description of your package
description:    Please see the README on Github at <https://github.com/githubuser/marcelloh#readme>
homepage:       https://github.com/https://gitlab.com/notarianni/marcelloh#readme
bug-reports:    https://github.com/https://gitlab.com/notarianni/marcelloh/issues
author:         Bernard Notarianni
maintainer:     example@example.com
copyright:      2017 Bernard Notarianni
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/https://gitlab.com/notarianni/marcelloh

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , split
  exposed-modules:
      Cal
      Lib
  other-modules:
      Paths_marcelloh
  default-language: Haskell2010

executable marcelloh-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , http-client
    , http-client-tls
    , http-types
    , marcelloh
  other-modules:
      Paths_marcelloh
  default-language: Haskell2010

test-suite marcelloh-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec
    , hspec-discover
    , marcelloh
  other-modules:
      CalSpec
      Paths_marcelloh
  default-language: Haskell2010
